crates/ars-components/src/utility/snapshots/ars_components__utility__dismissable__tests__dismissable_dismiss_button_custom_label.snap
---
source: crates/ars-components/src/utility/dismissable.rs
expression: "snapshot_attrs(&Api::new(Props::new(), \"Close dialog\").dismiss_button_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "dismiss-button",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dismissable",
            ),
        ),
        (
            Data(
                "ars-visually-hidden",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Close dialog",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
