crates/ars-components/src/utility/snapshots/ars_components__utility__dismissable__tests__dismissable_part_root.snap
---
source: crates/ars-components/src/utility/dismissable.rs
expression: "snapshot_attrs(&api(Props::new()).part_attrs(Part::Root))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dismissable",
            ),
        ),
    ],
    styles: [],
}
