crates/ars-components/src/utility/snapshots/ars_components__utility__dismissable__tests__dismissable_root_pointer_blocking.snap
---
source: crates/ars-components/src/utility/dismissable.rs
expression: "snapshot_attrs(&api(Props::new().disable_outside_pointer_events(true)).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disable-outside-pointer-events",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dismissable",
            ),
        ),
    ],
    styles: [],
}
